добавление кнопки All

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -178,11 +178,25 @@ div
 .toggle-btn
     padding-bottom: 20px
 
-.layout
+.all
     border: none
     padding: 7px 13px
     background-color: #eee
     border-bottom-left-radius: 10px
+    outline: none
+    font-family: "Taurus", sans-serif
+
+    &:hover
+        cursor: pointer
+        background-color: #EE101B
+
+.layout
+    border: none
+    padding: 7px 13px
+    background-color: #eee
+    margin-left: -5px
+    outline: none
+    font-family: "Taurus", sans-serif
 
     &:hover
         cursor: pointer
@@ -194,6 +208,8 @@ div
     padding: 7px 13px
     border-bottom-right-radius: 10px
     margin-left: -5px
+    outline: none
+    font-family: "Taurus", sans-serif
 
     &:hover
         cursor: pointer
@@ -222,7 +238,7 @@ div
 .copyright-text
     color: #fff
     font-size: 20px
-    font-family: taurus
+    font-family: "Taurus", sans-serif
 
 .copyright-heart
     color: #EE101B
