--- a/rizzoma/src/index.pug
+++ b/rizzoma/src/index.pug
@@ -3,6 +3,27 @@ html
     head
     meta(charset = 'utf-8')
     meta(name='viewport', content="initial-scale=1.0, width=device-width")
-    title Webpack app
+    title #{title}
     body
-        h1 test pug
+        h1 test pug file index.pug
+    
+//- block variables
+//-     - var title = 'Headers & Footers'
+
+//- block content
+//-     section
+//-         .wrapper
+//-             .content-wrapper
+//-                 h1 test pug
+//-                 p hello
+
+//-     section
+//-         .wrapper
+//-             .content-wrapper
+//-                 h1 test pug
+//-                 p hello
+//-     section
+//-         .wrapper
+//-             .content-wrapper
+//-                 h1 test pug
+//-                 p hello
