правка стилей в main.css

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -195,6 +195,12 @@ div {
   flex-wrap: wrap;
 }
 
+@media(max-width: 500px){
+  .portfolio-items{
+    justify-content: center;
+  }
+}
+
 .portfolio-item {
   text-align: center;
   margin-bottom: 100px;
