--- a/app/style/main.css
+++ b/app/style/main.css
@@ -281,6 +281,24 @@ div {
   background-color: #EE101B;
 }
 
+.line{
+  border-bottom: 1px solid lightgrey;
+  max-width: 1100px;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.examples-title{
+  max-width: 1100px;
+  width: 100%;
+  text-align: center;
+}
+
+.examples-descr{
+  max-width: 300px;
+  width: 100%;
+}
+
 .footer {
   background: url(../img/footer.jpg);
   width: 100%;
