--- a/app/style/main.css
+++ b/app/style/main.css
@@ -288,15 +288,27 @@ div {
   margin-bottom: 50px;
 }
 
+.examples-wrapper{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .examples-title{
   max-width: 1100px;
   width: 100%;
   text-align: center;
+  padding-bottom: 36px;
 }
 
 .examples-descr{
   max-width: 300px;
   width: 100%;
+}
+
+.calc-img{
+  padding-bottom: 25px;
 }
 
 .footer {
