--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -152,6 +152,10 @@ div
     &:hover
         color: #EE101B
 
+body.lock
+    @media(max-width: 1130px)
+        overflow: hidden;
+
 .img-screen
     max-width: 300px
     width: 100%
