верстка секций сайта

--- a/freehand/src/blocks/header/header/header.pug
+++ b/freehand/src/blocks/header/header/header.pug
@@ -4,6 +4,7 @@ include ../buttons/buttons
 
 mixin header()
     section.header__wrapper
+        +logo()
         .menu__container
             nav.menu
                 ul.menu__list
