--- a/freehand/src/base.pug
+++ b/freehand/src/base.pug
@@ -6,6 +6,7 @@ html
         title
             block title
         include assets/favicons/favicons
+        link(rel="stylesheet" href="/src/assets/fonts/font-awesome/css/all.min.css")
     body
         block main
         block index-page
