--- a/freehand/src/blocks/banner/slider/slider.scss
+++ b/freehand/src/blocks/banner/slider/slider.scss
@@ -3,5 +3,40 @@
         max-width: 576px;
         width: 100%;
     }
+}
 
+.arrow{
+    &__wrapper{
+        width: 55px;
+        background-color: #16133D;
+        border-radius: 5px;
+        height: 55px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__left{
+        position: relative;
+        top: 240px;
+        left: -25px;
+        padding: 17px;
+        cursor: pointer;
+
+        &:hover{
+            background-color: #007FFC;
+        }
+    }
+
+    &__right{
+        position: relative;
+        bottom: 232px;
+        left: 550px;
+        padding: 17px;
+        cursor: pointer;
+
+        &:hover{
+            background-color: #007FFC;
+        }
+    }
 }
