--- a/freehand/src/pages/index/index.pug
+++ b/freehand/src/pages/index/index.pug
@@ -3,6 +3,7 @@ include ../../blocks/header/header/header
 include ../../blocks/banner/banner/banner
 include ../../blocks/service/service/service
 include ../../blocks/features/features/features
+include ../../blocks/price/price/price
 include ../../blocks/proposal/proposal
 include ../../blocks/footer/footer/footer
 
@@ -14,5 +15,6 @@ block index-page
     +banner()
     +service()
     +features()
+    +price()
     +proposal()
     +footer()
