изменения неточностей согласно pixel perfect

--- a/freehand/src/blocks/banner/banner/banner.pug
+++ b/freehand/src/blocks/banner/banner/banner.pug
@@ -6,6 +6,6 @@ mixin banner()
     section.banner__wrapper
         .description__container
             +description('Freehand your brand with a beautiful website', 'Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .')
-            +descriptionBtnBanner('View Projects', 'Learn more')
+            +descriptionBtnBanner('View Projects', 'Learn more', 'blue', 'white')
         .slider__container
             +slider()
