--- a/freehand/src/blocks/service/cards/cards.scss
+++ b/freehand/src/blocks/service/cards/cards.scss
@@ -13,12 +13,12 @@ $borderImg: 1px solid rgba(21, 101, 216, 0.1);
     }
 
     &__caption{
-        font-family: 'Nunito Sans';
+        font-family: system-ui;
         font-weight: 600;
         font-style: normal;
         font-size: 40px;
         line-height: 52px;
-        margin: 17px 0 6px;
+        margin: 14px 1px 8px;
         color: #16133D;
     }
 
