--- a/freehand/src/blocks/header/buttons/buttons.scss
+++ b/freehand/src/blocks/header/buttons/buttons.scss
@@ -9,25 +9,36 @@ $borderBtn: 2px solid #16133D;
     text-align: center;
     line-height: 42px;
     cursor: pointer;
-    color: #16133D;
-
-    &:hover{
-        background-color: #16133D;
-        color: #fff;
-    }
 }
 
 .button__link{
-    font-style: 'Roboto-Medium';
+    font-family: 'Roboto-Medium';
     font-weight: 500;
     font-style: normal;
     font-size: 16px;
     line-height: 18px;
-    padding: 12px 34px 15px 35px;
     border-radius: 5px;
+    padding: 5px 5px 5px 5px;
 
-    &:hover{
+    &--blue{
         color: #fff;
         background-color: #16133D;
+        padding: 11px 38px 14px;
+
+        &:hover{
+            color: #16133D;
+            background-color: #fff;
+        }
+    }
+
+    &--white{
+        color: #16133D;
+        background-color: #fff;
+        padding: 11px 36px 14px 30px;
+
+        &:hover{
+            color: #fff;
+            background-color: #16133D;
+        }
     }
 }
