--- a/freehand/src/blocks/header/header/header.scss
+++ b/freehand/src/blocks/header/header/header.scss
@@ -2,14 +2,13 @@
     &__wrapper{
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid #EFEEF3;
         padding-bottom: 29px;
-        max-width: 1155px;
+        max-width: 1186px;
         width: 100%;
-        margin: 32px auto 54px;
+        margin: 25px auto 7px auto;
     }
 
     &__buttons{
@@ -18,5 +17,6 @@
         justify-content: space-between;
         max-width: 256px;
         width: 100%;
+        padding-top: 3px;
     }
 }
