--- a/freehand/src/blocks/header/logo/logo.pug
+++ b/freehand/src/blocks/header/logo/logo.pug
@@ -1,6 +1,8 @@
-mixin logo()
-    .logo__container
-        .logo
-            img(class="logo__img" src=require('../../assets/img/logo.png').default, alt="logo")
-        .logo__text
-            span Freehand
+mixin logo(logoFooter)
+    if(logoFooter ==='logo-footer')
+            .logo
+                img(class="logo__img" src=require('../../assets/img/logo-footer.png').default, alt="logo-footer")
+    else
+        .logo__container
+            .logo
+                img(class="logo__img" src=require('../../assets/img/logo.png').default, alt="logo")
