--- a/freehand/src/blocks/header/menu/menu.scss
+++ b/freehand/src/blocks/header/menu/menu.scss
@@ -6,12 +6,16 @@
     }
 
     &__container{
-        max-width: 361px;
+        max-width: 362px;
         width: 100%;
+        padding-right: 5px;
+        margin-left: 52px;
+        margin-top: -2px;
     }
 
     &__link{
-        font-style: 'Roboto-Medium';
+        font-family: 'Roboto-Medium';
+        font-style: normal;
         font-weight: 500;
         font-style: normal;
         font-size: 16px;
