--- a/freehand/src/blocks/proposal/proposal.pug
+++ b/freehand/src/blocks/proposal/proposal.pug
@@ -4,5 +4,5 @@ mixin proposal()
             h4(class="proposal__title") Get started today and try 30 days free
             p(class="proposal__text") No contact, no set-up costs, just awesome way to organise your money.
             .proposal__buttons
-                a(class="proposal__link" href="#") Try it for free
-                a(class="proposal__link" href="#") Watch Demo
+                a(class="proposal__link proposal__link--white" href="#") Try it for free
+                a(class="proposal__link proposal__link--blue" href="#") Watch Demo
