--- a/freehand/src/blocks/proposal/proposal.scss
+++ b/freehand/src/blocks/proposal/proposal.scss
@@ -11,12 +11,13 @@ $borderBtn: 2px solid #fff;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    background-color: #0072ff;
+    margin-left: 26px;
 
     &__wrapper{
-        max-width: 1150px;
+        max-width: 1176px;
         width: 100%;
-        margin: 210px auto 0 auto;
+        margin: 249px auto 0px;
     }
 
     &__title{
@@ -39,7 +40,8 @@ $borderBtn: 2px solid #fff;
     }
 
     &__buttons{
-        margin-top: 48px;
+        margin-top: 63px;
+        margin-left: 10px;
         font-family: 'Roboto-Regular';
         font-weight: 400;
         font-style: normal;
@@ -49,19 +51,36 @@ $borderBtn: 2px solid #fff;
     }
 
     &__link{
-        padding: 15px 39px;
-        background-color: #fff;
-        border: $borderBtn;
+        padding: 12px 45px;
         border-radius: 50px;
         margin-right: 20px;
+        background-color: #fff;
+        border: $borderBtn;
 
         &:last-child{
             margin-right: 0;
         }
 
-        &:hover{
+        &--white{
+            background-color: #fff;
+            border: $borderBtn;
+            color: #4d61fc;
+
+            &:hover{
+                background-color: #4d61fc;
+                color: #fff;
+            }
+        }
+
+        &--blue{
             background-color: #4d61fc;
+            border: $borderBtn;
             color: #fff;
+
+            &:hover{
+                background-color: #fff;
+                color: #4d61fc;
+            }
         }
     }
 }
